--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-11-23 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Cleaned up pilot (opacified) for cleaner net design.
+
 2011-11-22 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Now using 64-bit seq in pil module.
