--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-11-25 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Node listing works (bug-fixed some SQL queries).
+
 2011-11-24 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Introduced p2p_entry object to list remote nodes.
