--- a/liquidwar6/doc/cfg-gdoc.texi
+++ b/liquidwar6/doc/cfg-gdoc.texi
@@ -86,6 +86,108 @@ as command line parameters, will be taken from the command-line.
 @strong{Return value:}  1 if successfull, 0 if error.
 @end deftypefun
 
+@deftypefun {int} {lw6cfg_option_exists} (void * @var{context}, char * @var{key})
+@var{context}:  context to query
+
+@var{key}:  key to search
+
+Returns wether a key exists within context or not.
+
+@strong{Return value:}  1 if exists, 0 if not
+@end deftypefun
+
+@deftypefun {char *} {lw6cfg_get_option} (void * @var{context}, char * @var{key})
+@var{context}:  context to query
+
+@var{key}:  key to search
+
+Returns the current value for a given query, the returned value is always
+a string, typically the string one would pass on the command line or
+set in a config file
+
+@strong{Return value:}  pointer to string, must not be freed.
+@end deftypefun
+
+@deftypefun {void} {lw6cfg_set_option} (void * @var{context}, char * @var{key}, char * @var{value})
+@var{context}:  context to modify
+
+@var{key}:  key to search and change
+
+@var{value}:  new value
+
+Sets a given key to the specified value, this is a string only
+function, pass the value you would pass on the command line or
+set in a config file.
+
+@strong{Return value:}  none
+@end deftypefun
+
+@deftypefun {int} {lw6cfg_get_option_int} (void * @var{context}, char * @var{key})
+@var{context}:  context to query
+
+@var{key}:  key to search
+
+Returns an option as an integer. Note that this function does
+not know wether the parameter should really be an integer or not,
+so you can call it even on non-integer values, but of course
+results will have no real meaning.
+
+@strong{Return value:}  option value converted to int
+@end deftypefun
+
+@deftypefun {void} {lw6cfg_set_option_int} (void * @var{context}, char * @var{key}, int @var{value})
+@var{context}:  context to modify
+
+@var{key}:  key to search and change
+
+@var{value}:  new value
+
+Set a config option to an integer value. Note that this function
+does not know wether the parameter should really be an integer or not,
+so you can call it even on non-integer values, at your own risk.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {int} {lw6cfg_get_option_bool} (void * @var{context}, char * @var{key})
+@var{context}:  context to query
+
+@var{key}:  key to search
+
+Returns an option as a boolean. Note that this function does
+not know wether the parameter should really be a boolean or not,
+so you can call it even on non-boolean values, but of course
+results will have no real meaning.
+
+@strong{Return value:}  option value converted to boolean
+@end deftypefun
+
+@deftypefun {void} {lw6cfg_set_option_bool} (void * @var{context}, char * @var{key}, int @var{value})
+@var{context}:  context to modify
+
+@var{key}:  key to search and change
+
+@var{value}:  new value
+
+Set a config option to a boolean value. Note that this function
+does not know wether the parameter should really be a boolean or not,
+so you can call it even on non-boolean values, at your own risk.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {int} {lw6cfg_must_be_saved} (char * @var{key})
+@var{key}:  key to test
+
+Tells wether a key should be saved in the config file.
+Typically, some options you don't want to savem such as
+the location of the config file itself. Most of those
+non-savable parameters are path-related. This does not
+mean no paths are saved in the config file.
+
+@strong{Return value:}  1 if must be saved, 0 if not
+@end deftypefun
+
 @deftypefun {int} {lw6cfg_save} (void * @var{cfg_context}, char * @var{filename})
 @var{cfg_context}:  a context returned by @code{lw6cfg_init}
 
@@ -203,5 +305,190 @@ say the "LW6_MAP_PATH" env value, the "--map-path" command-line
 paramater and the LW6DEF_MAP_PATH config file entry.
 
 @strong{Return value:}  the directory path, might be NULL, must be freed.
+@end deftypefun
+
+@deftypefun {char *} {lw6cfg_xml_element} (lw6hlp_type_t @var{type})
+@var{type}:  type as an enum
+
+Returns the string corresponding to a given type, suitable for
+use in XML files. For instance if you pass @code{LW6HLP_TYPE_INT} then
+you will obtain the string int (string of 3 chars containing i, n 
+and t.
+
+@strong{Return value:}  string, must not be freed.
+@end deftypefun
+
+@deftypefun {void} {lw6cfg_read_xml_int} (char * @var{xml_key}, char * @var{xml_value}, char * @var{target_key}, int * @var{value})
+@var{xml_key}:  key found in XML file
+
+@var{xml_value}:  value found in XML file
+
+@var{target_key}:  key we're searching for
+
+@var{value}:  the value if found (out param)
+
+Tries to find a value in a key/value pair. If @code{xml_key} and @code{target_key}
+match, then will put the corresponding value (converted to int) in
+the @code{value} param. Typically, you would call this in a loop on every
+single entry found in an XML file, in an expat callback.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cfg_read_xml_bool} (char * @var{xml_key}, char * @var{xml_value}, char * @var{target_key}, int * @var{value})
+@var{xml_key}:  key found in XML file
+
+@var{xml_value}:  value found in XML file
+
+@var{target_key}:  key we're searching for
+
+@var{value}:  the value if found (out param)
+
+Tries to find a value in a key/value pair. If @code{xml_key} and @code{target_key}
+match, then will put the corresponding value (converted to boolean) in
+the @code{value} param. Typically, you would call this in a loop on every
+single entry found in an XML file, in an expat callback.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cfg_read_xml_float} (char * @var{xml_key}, char * @var{xml_value}, char * @var{target_key}, float * @var{value})
+@var{xml_key}:  key found in XML file
+
+@var{xml_value}:  value found in XML file
+
+@var{target_key}:  key we're searching for
+
+@var{value}:  the value if found (out param)
+
+Tries to find a value in a key/value pair. If @code{xml_key} and @code{target_key}
+match, then will put the corresponding value (converted to float) in
+the @code{value} param. Typically, you would call this in a loop on every
+single entry found in an XML file, in an expat callback.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cfg_read_xml_string} (char * @var{xml_key}, char * @var{xml_value}, char * @var{target_key}, char ** @var{value})
+@var{xml_key}:  key found in XML file
+
+@var{xml_value}:  value found in XML file
+
+@var{target_key}:  key we're searching for
+
+@var{value}:  the value if found (out param)
+
+Tries to find a value in a key/value pair. If @code{xml_key} and @code{target_key}
+match, then will put the corresponding value (as a string) in
+the @code{value} param. Typically, you would call this in a loop on every
+single entry found in an XML file, in an expat callback.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cfg_read_xml_color} (char * @var{xml_key}, char * @var{xml_value}, char * @var{target_key}, lw6sys_color_8_t * @var{value})
+@var{xml_key}:  key found in XML file
+
+@var{xml_value}:  value found in XML file
+
+@var{target_key}:  key we're searching for
+
+@var{value}:  the value if found (out param)
+
+Tries to find a value in a key/value pair. If @code{xml_key} and @code{target_key}
+match, then will put the corresponding value (converted to a color) in
+the @code{value} param. Typically, you would call this in a loop on every
+single entry found in an XML file, in an expat callback.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {int} {lw6cfg_read_key_value_xml_file} (char * @var{filename}, void @var{(*callback_func})
+@var{filename}:  full path of file to read
+
+Will parse a file and call the given callback on each element.
+This is an over-simplified way to read XML file, in fact we just
+explain plain non-nested simple elements but this is exactly what
+LW config files are made of.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
+@deftypefun {void} {lw6cfg_write_xml_int} (FILE * @var{f}, char * @var{key}, int @var{value})
+@var{f}:  file to write data to (append mode)
+
+@var{key}:  key to write
+
+@var{value}:  value to write
+
+Writes an int entry into an opened XML file.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cfg_write_xml_bool} (FILE * @var{f}, char * @var{key}, int @var{value})
+@var{f}:  file to write data to (append mode)
+
+@var{key}:  key to write
+
+@var{value}:  value to write
+
+Writes a boolean entry into an opened XML file.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cfg_write_xml_float} (FILE * @var{f}, char * @var{key}, float @var{value})
+@var{f}:  file to write data to (append mode)
+
+@var{key}:  key to write
+
+@var{value}:  value to write
+
+Writes a float entry into an opened XML file.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cfg_write_xml_string} (FILE * @var{f}, char * @var{key}, char * @var{value})
+@var{f}:  file to write data to (append mode)
+
+@var{key}:  key to write
+
+@var{value}:  value to write
+
+Writes a string entry into an opened XML file.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cfg_write_xml_color} (FILE * @var{f}, char * @var{key}, lw6sys_color_8_t @var{value})
+@var{f}:  file to write data to (append mode)
+
+@var{key}:  key to write
+
+@var{value}:  value to write
+
+Writes a color entry into an opened XML file.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cfg_write_xml_guess_type} (FILE * @var{f}, char * @var{key}, char * @var{value})
+@var{f}:  file to write data to (append mode)
+
+@var{key}:  key to write
+
+@var{value}:  value to write
+
+Writes an entry into an opened XML file, will try and guess
+type from the internal help system, typically, if this is a
+standard config file entry (the one documented by the about
+command line function) it will pick up the right type. The
+reason not to use this all the times is that sometimes, one
+might to to store non-standard options, and additionnally,
+guessing the type does consume some CPU.
+
+@strong{Return value:}  none.
 @end deftypefun
 
