--- a/liquidwar6/doc/bot-gdoc.texi
+++ b/liquidwar6/doc/bot-gdoc.texi
@@ -3,14 +3,15 @@
 
 @var{seed}:  parameters required to build bot (game state, among other things)
 
-Initializes a bot object. The seed is absolutely required, for a bot really
+Initializes a bot object. Must be performed before any other call.
+The seed is absolutely required, for a bot really
 needs to know what map/context it's working on, including at creation time
 
 @strong{Return value:}  1 on success, 0 on failure.
 @end deftypefun
 
 @deftypefun {void} {lw6bot_quit} (lw6bot_backend_t * @var{backend})
-@var{backend}:  unitialize a bot
+@var{backend}:  unitialize a bot backend
 
 Closes a bot, but does not free all ressources.
 @end deftypefun
@@ -41,11 +42,14 @@ Gives a human readable representation of bot
 
 @var{argv}:  argv, as passed to @code{main}
 
-List available bots. The list contains only the bot keys,
-strings which can then be used to construct the bots themselves,
-but at this stage bot objects might not be instanciated.
+List available bot backends. The hash contains pairs with id and name
+for each backend. The id is the technical key you can use to
+load the backend, the name is something more readable you can display
+in an interface. The backend objects themselves are not instanciated
+by this (in fact, they are, but released on the fly) you need to
+load and initialize them afterwards.
 
-@strong{Return value:}  list of strings.
+@strong{Return value:}  hash containing id/name pairs.
 @end deftypefun
 
 @deftypefun {lw6bot_backend_t *} {lw6bot_create_backend} (int @var{argc}, char * [] @var{argv}, char * @var{name})
