--- a/liquidwar6/doc/cns-gdoc.texi
+++ b/liquidwar6/doc/cns-gdoc.texi
@@ -1,3 +1,41 @@
+@deftypefun {void} {lw6cns_handler_install} (lw6cns_callback_func_t @var{callback})
+@var{callback}:  handler function.
+
+Installs a console handler.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cns_handler_poll} ()
+
+Polling function for console, must be called on a regular basis.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cns_handler_remove} ()
+
+Remove console handler.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cns_history_add_if_needed} (char * @var{line})
+@var{line}:  line to add
+
+Adds a line to the console history, won't add it if
+it's NULL or empty.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {int} {lw6cns_support} ()
+
+Tells wether console is supported.
+
+@strong{Return value:}  1 if console can be enabled, 0 if not
+@end deftypefun
+
 @deftypefun {int} {lw6cns_test} (int @var{mode})
 @var{mode}:  0 for check only, 1 for full test
 
